--- a/partials/main.html
+++ b/partials/main.html
@@ -2,11 +2,11 @@
 	<h1 class="red">Hello Welcome to my page!</h1>
 	<br>
 	<br>
-	<img src="img/main/propic.jpg" class="pic1">
-	<img src="img/main/sam1.jpg" class="pic2">
-	<img src="img/main/pic2.jpg" class="pic3">
+	<img src="/img/main/propic.jpg" class="pic1">
+	<img src="/img/main/sam1.jpg" class="pic2">
+	<img src="/img/main/pic2.jpg" class="pic3">
 	<br>
-	<img src="img/main/google-treats.jpg" class="pic4">
-	<img src="img/main/pic1.jpg" class="pic5">
+	<img src="/img/main/google-treats.jpg" class="pic4">
+	<img src="/img/main/pic1.jpg" class="pic5">
 	<!-- <img src="img/main/pic3.jpg" class="pic6"> -->
 </div>
