--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,6 +18,11 @@ body {
     /*background: #EAEDF1 url(/assets/img/noise-f1.gif) repeat -70% 0;*/
 }
 
+*
+{
+  font-family: Algerian;
+}
+
 .content-center 
 {
   text-align: center;
@@ -86,6 +91,20 @@ body {
 .big-font
 {
   font-size: 20px;
+}
+
+.navigation li
+{
+  display: inline;
+  list-style-type: none;
+  font-size: 130%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.navigation .menu {
+  color: #FFFFFF;
+  line-height: 35px;
 }
 
 img.signature {
