--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -23,6 +23,10 @@ body {
   font-family: Algerian;
 }
 
+b {
+  font-size: 18px;
+}
+
 .content-center 
 {
   text-align: center;
@@ -76,6 +80,11 @@ body {
   margin-right: 10px;
 }
 
+.move-right
+{
+  margin-left: 30px;
+}
+
 .green {
   color: green;
 }
@@ -86,6 +95,11 @@ body {
 
 .text-error {
   color: #FF0000;
+}
+
+.medium-font
+{
+  font-size: 16px;
 }
 
 .big-font
