--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -9,8 +9,15 @@
 		<div class="span8">
 			<h3>Discussion Worksheet and Solutions</h3>
 			<ul>
-				<a href="/downloads/ee20/prereqQuiz.pdf" class="medium-font" target="_self">Discussion 1</a>&nbsp;
-				<a href="/downloads/ee20/prereqQuizSolutions.pdf" class="medium-font" target="_self">(Solutions)</a>
+				<li>
+					<a href="/downloads/ee20/prereqQuiz.pdf" class="medium-font" target="_self">Discussion 1</a>&nbsp;
+					<a href="/downloads/ee20/prereqQuizSolutions.pdf" class="medium-font" target="_self">(Solutions)</a>
+				</li>
+				<li>
+					<a href="/downloads/ee20/disc02.pdf" class="medium-font" target="_self">Discussion 2</a>&nbsp;
+					<a href="/downloads/ee20/disc02sol.pdf" class="medium-font" target="_self">(Solutions)</a>
+					<a href="/downloads/ee20/disc02notes.pdf" class="medium-font" target="_self">(Notes)</a>
+				</li>
 			<ul>
 		</div>
 		<div class="span4">
