--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -18,6 +18,9 @@
 					<a href="/downloads/ee20/disc02sol.pdf" class="medium-font" target="_self">(Solutions)</a>
 					<a href="/downloads/ee20/disc02notes.pdf" class="medium-font" target="_self">(Notes)</a>
 				</li>
+				<li>
+					<a href="/downloads/ee20/disc03.pdf" class="medium-font" target="_self">Discussion 3 (Power Point)</a>
+				</li>
 			<ul>
 		</div>
 		<div class="span4">
