--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -19,7 +19,10 @@
 					<a href="/downloads/ee20/disc02notes.pdf" class="medium-font" target="_self">(Notes)</a>
 				</li>
 				<li>
-					<a href="/downloads/ee20/disc03.pdf" class="medium-font" target="_self">Discussion 3 (Power Point)</a>
+					<a href="/downloads/ee20/disc03.pdf" class="medium-font" target="_self">Discussion 3 (pdf)</a>
+				</li>
+				<li>
+					<a href="/downloads/ee20/disc04.pdf" class="medium-font" target="_self">Discussion 4 (pdf)</a>
 				</li>
 			<ul>
 		</div>
