add beautiful background to main page

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -27,6 +27,15 @@ b {
   font-size: 18px;
 }
 
+.main {
+  background:url('/assets/img/background_image.jpg')
+   no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .content-center 
 {
   text-align: center;
