--- a/assets/partials/main.html
+++ b/assets/partials/main.html
@@ -1,7 +1,21 @@
-<div>
-	<h1 class="red">Hello Welcome to my page!</h1>
+<div >
+	<h1 style="color:rgb(255,255,255); display: inline;">Samuel H. Kim</h1>
+	<img src="/assets/img/main/propic.jpg" class="propic"></img>
+	<h4 style="color:rgb(255, 255, 255);">Class of 2016</h4>
+	<h4 style="color:rgb(255,255,255);">Student at University of California, Berkeley</h4>
+	<h4 style="color:rgb(255,255,255);">Pursuing a degree in Electrical Engineering and Computer Science</h4>
 	<br>
-	<br>
+	<about ng-animate="animate">
+	I'm a bright young student from Minnesota ready to thrive in the world 
+	revolutionized by scientific discovery and technology. I am currently 
+	working to obtain a B.S in Electrical Engineering and Computer Science at 
+	UC Berkeley. I have gained a fundamental knowledge of programming and am 
+	constantly trying to find new ways to tackle relevant problems and make 
+	life more convenient. When not in an academic setting, I enjoy snowboarding, 
+	dancing, and listening to music.
+
+	</about>
+</div>
 	<!--
 	<img src="/assets/img/main/propic.jpg" class="pic1">
 	<img src="/assets/img/main/sam1.jpg" class="pic2">
@@ -11,4 +25,3 @@
 	<img src="/assets/img/main/pic1.jpg" class="pic5">
 -->
 	<!-- <img src="img/main/pic3.jpg" class="pic6"> -->
-</div>
