add discussion 6 to ee20

--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -24,6 +24,9 @@
 				<li>
 					<a href="/downloads/ee20/disc04.pdf" class="medium-font" target="_self">Discussion 4 (pdf)</a>
 				</li>
+				<li>
+					<a href="/downloads/ee20/discussion6.pdf" class="medium-font" target="_self">Discussion 5 Notes in Latex (pdf)</a>
+				</li>
 			<ul>
 		</div>
 		<div class="span4">
