--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -25,7 +25,10 @@
 					<a href="/downloads/ee20/disc04.pdf" class="medium-font" target="_self">Discussion 4 (pdf)</a>
 				</li>
 				<li>
-					<a href="/downloads/ee20/discussion6.pdf" class="medium-font" target="_self">Discussion 5 Notes in Latex (pdf)</a>
+					<a href="/downloads/ee20/discussion6.pdf" class="medium-font" target="_self">Discussion 5 Notes  (pdf)</a>
+				</li>
+				<li>
+					<a href="/downloads/ee20/discussion7.pdf" class="medium-font" target="_self">Discussion 6 Notes (pdf)</a>
 				</li>
 			<ul>
 		</div>
