--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -30,6 +30,9 @@
 				<li>
 					<a href="/downloads/ee20/discussion7.pdf" class="medium-font" target="_self">Discussion 7 Notes (pdf)</a>
 				</li>
+				<li>
+					<a href="/downloads/ee20/discussion8.pdf" class="medium-font" target="_self">Discussion 8 Notes (Extra problems included)</a>
+				</li>
 			<ul>
 		</div>
 		<div class="span4">
