--- a/2048/style/main.css
+++ b/2048/style/main.css
@@ -3,12 +3,17 @@ html, body {
   margin: 0;
   padding: 0;
   background: #faf8ef;
-  color: #776e65;
+  background: url("/2048/img/rsz_1rsz_1sathergate_shrunk.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #030324;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; }
 
 body {
-  margin: 80px 0; }
+  margin: 40px 0; }
 
 .heading:after {
   content: "";
@@ -21,6 +26,13 @@ h1.title {
   margin: 0;
   display: block;
   float: left; }
+
+.title-img {
+  position: relative;
+  float: left;
+  height: 170px;
+  width: 260px;
+  margin: 10px; }
 
 @-webkit-keyframes move-up {
   0% {
@@ -48,12 +60,16 @@ h1.title {
     opacity: 0; } }
 .scores-container {
   float: right;
-  text-align: right; }
+  text-align: right;
+  position: relative;
+  bottom: 0;
+  right: 0;
+  margin-top: 30%; }
 
 .score-container, .best-container {
   position: relative;
   display: inline-block;
-  background: #bbada0;
+  background: #f4c643;
   padding: 15px 25px;
   font-size: 25px;
   height: 25px;
@@ -101,7 +117,7 @@ p {
   line-height: 1.65; }
 
 a {
-  color: #776e65;
+  color: #10100F;
   font-weight: bold;
   text-decoration: underline;
   cursor: pointer; }
@@ -117,7 +133,12 @@ hr {
 
 .container {
   width: 500px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding-right: 200px;
+  padding-left: 200px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 10px;
+  box-shadow: 10px 10px 5px #888888; }
 
 @-webkit-keyframes fade-in {
   0% {
@@ -149,7 +170,7 @@ hr {
   -ms-user-select: none;
   -ms-touch-action: none;
   touch-action: none;
-  background: #bbada0;
+  background: #f4c643;
   border-radius: 6px;
   width: 500px;
   height: 500px;
@@ -183,7 +204,7 @@ hr {
       margin-top: 59px; }
     .game-container .game-message a {
       display: inline-block;
-      background: #8f7a66;
+      background: #c5950c;
       border-radius: 3px;
       padding: 0 20px;
       text-decoration: none;
@@ -207,7 +228,8 @@ hr {
 
 .grid-container {
   position: absolute;
-  z-index: 1; }
+  z-index: 1;
+  color: #FFE303; }
 
 .grid-row {
   margin-bottom: 15px; }
@@ -224,7 +246,7 @@ hr {
   margin-right: 15px;
   float: left;
   border-radius: 3px;
-  background: rgba(238, 228, 218, 0.35); }
+  background: #0a1873; }
   .grid-cell:last-child {
     margin-right: 0; }
 
@@ -488,11 +510,12 @@ hr {
 .game-intro {
   float: left;
   line-height: 42px;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  width: 70%; }
 
 .restart-button {
   display: inline-block;
-  background: #8f7a66;
+  background: #c5950c;
   border-radius: 3px;
   padding: 0 20px;
   text-decoration: none;
@@ -505,7 +528,7 @@ hr {
 
 .undo-button {
   display: inline-block;
-  background: #8f7a66;
+  background: #c5950c;
   border-radius: 3px;
   padding: 0 20px;
   text-decoration: none;
@@ -569,7 +592,7 @@ hr {
     -ms-user-select: none;
     -ms-touch-action: none;
     touch-action: none;
-    background: #bbada0;
+    background: #f4c643;
     border-radius: 6px;
     width: 280px;
     height: 280px;
@@ -603,7 +626,7 @@ hr {
         margin-top: 59px; }
       .game-container .game-message a {
         display: inline-block;
-        background: #8f7a66;
+        background: #c5950c;
         border-radius: 3px;
         padding: 0 20px;
         text-decoration: none;
@@ -627,7 +650,8 @@ hr {
 
   .grid-container {
     position: absolute;
-    z-index: 1; }
+    z-index: 1;
+    color: #FFE303; }
 
   .grid-row {
     margin-bottom: 10px; }
@@ -644,7 +668,7 @@ hr {
     margin-right: 10px;
     float: left;
     border-radius: 3px;
-    background: rgba(238, 228, 218, 0.35); }
+    background: #0a1873; }
     .grid-cell:last-child {
       margin-right: 0; }
 
