--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -30,6 +30,30 @@ body {
     display: block;
   }
 }
+
+.repeat-enter-setup, .repeat-leave-setup, .repeat-move-setup {
+    -webkit-transition:all linear 1s;
+    -moz-transition:all linear 1s;
+    -ms-transition:all linear 1s;
+    -o-transition:all linear 1s;
+    transition:all linear 1s;
+}
+.repeat-enter-setup {
+    max-height: 0;
+    opacity:0;
+}
+.repeat-enter-setup.repeat-enter-start {
+    max-height: 250px;
+    opacity:1;
+}
+.repeat-leave-setup {
+    opacity:1;
+    max-height: 250px;
+}
+.repeat-leave-setup.repeat-leave-start {
+    opacity:0;
+    max-height: 0;
+}
   
   .animate-enter {
     -webkit-animation: fadeInLeft 1s;
