--- a/assets/partials/main.html
+++ b/assets/partials/main.html
@@ -5,7 +5,14 @@
 	<h4 style="color:rgb(255,255,255);">Student at University of California, Berkeley</h4>
 	<h4 style="color:rgb(255,255,255);">Pursuing a degree in Electrical Engineering and Computer Science</h4>
 	<br>
-
+<!--<a href="http://freehitcountercode.com/">
+				<img border="0" src="http://www.freehitcountercode.com/counter.php?b=ffffff&r=000000&f=000000&unique=0&start=0" width="120" height="30" />
+		</a>
+		<br />
+		<span style="font-size: 5%;">
+				<a href="http://freehitcountercode.com/">free website hit counter code</a>
+		</span>
+	-->
 	<about ng-class="{transition: toggle}" class="box on" ng-animate="box">
 		I'm a bright young student from Minnesota ready to thrive in the world 
 		revolutionized by scientific discovery and technology. I am currently 
