--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -33,6 +33,9 @@
 				<li>
 					<a href="/downloads/ee20/discussion8.pdf" class="medium-font" target="_self">Discussion 8 Notes (Extra problems included)</a>
 				</li>
+				<li>
+					<a href="/downloads/ee20/discussion10.pdf" class="medium-font" target="_self">Discussion 10 Notes</a>
+				</li>
 			<ul>
 		</div>
 		<div class="span4">
