--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -36,6 +36,9 @@
 				<li>
 					<a href="/downloads/ee20/discussion10.pdf" class="medium-font" target="_self">Discussion 10 Notes</a>
 				</li>
+				<li>
+					<a href="/downloads/ee20/discussion11.pdf" class="medium-font" target="_self">Discussion 11 Notes</a>
+				</li>
 			<ul>
 		</div>
 		<div class="span4">
