--- a/assets/partials/ee20.html
+++ b/assets/partials/ee20.html
@@ -39,6 +39,9 @@
 				<li>
 					<a href="/downloads/ee20/discussion11.pdf" class="medium-font" target="_self">Discussion 11 Notes</a>
 				</li>
+					<li>
+					<a href="/downloads/ee20/discussion12.pdf" class="medium-font" target="_self">Discussion 12 Notes (Overview)</a>
+				</li>
 			<ul>
 		</div>
 		<div class="span4">
