--- a/assets/partials/main.html
+++ b/assets/partials/main.html
@@ -23,12 +23,8 @@
 		dancing, and listening to music.
 		<a id="read-more" ng-hide="toggle" href="/" ng-click="toggleSwitch()">Read More</a>
 
-		Please feel free to explore my site. Currently, I am mostly using it
-		to post my discussion notes for EE20, the lower-division Signals and 
-		Systems class that I am TAing for. I recently been working on modifying
-		the viral 2048 game. If you have any questions or concern, please contact
-		me by the email located down below!
-		<a ng-show="toggle" href="/" ng-click="toggleSwitch()">Read Less</a>
+		
+		<!--<a ng-show="toggle" href="/" ng-click="toggleSwitch()">Read Less</a> -->
 	</about>
 
 
