--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -45,14 +45,14 @@ about {
 
 about.transition 
 {
-	height: 400px;
+	height: 300px;
 }
 
 {
   padding-top: 70px;
   position: fixed;
   background-color: #e8e8e8;
-  width: 80px;
+  width: 55%;
   min-height:1100px;
   height: 100%;
   float: left;
