--- a/assets/partials/projects.html
+++ b/assets/partials/projects.html
@@ -80,7 +80,7 @@
     <h2>2048 with Undo</h2>
     <div class="row">
         <div class="span7">
-            <img ng-src="/assets/img/2048.png" class="big-pic">
+            <img ng-src="/assets/img/2048.jpeg" class="big-pic">
         </div>
         <div class="span3">
             <h2>Description:</h2>
