--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -1,4 +1,10 @@
 .angular-google-map-container { 
 	height: 400px; 
 	width: 600px;
+	border-radius: 15px;
+  border: solid rgb(190, 92, 92);
+}
+
+.anchor {
+	color: rgb(248, 42, 75);
 }
