--- a/assets/partials/internship.html
+++ b/assets/partials/internship.html
@@ -6,7 +6,7 @@
   <div class="modal-body">
   	<form>
 		  <fieldset>
-		    <label>Enter Password (if you dare)</label>
+		    <label>Enter Password (hint: LDAP)</label>
 		    <input type="text" ng-model="$parent.password" placeholder="password…">
 		  </fieldset>
 		</form>
@@ -16,8 +16,45 @@
 	  <button class="btn btn-warning" ng-click="dismiss()">Close</button>
 	</div>
 	</script>
-
+  
 	<div ng-show="enabled">
-		Welcome
+		<pre>
+	Hi Paul and Ted,
+
+	  I have probably left by now, but I wanted to leave you guys a final note at the 
+	  end of my internship. Unfortunately we couldn't see each other on my last day, but
+	  I know you guys had a blast in London. 
+
+	  I just wanted to say a final thank you to you both for being incredible hosts/mentors
+	  to me. Thank you Paul for being such a caring and thoughtful host who really took the
+	  time to make sure I was having a fun and valuable internship experience. I am really 
+	  glad that you never directly gave me the answer when I was stuck but rather guided me so 
+	  that I could figure out the solution on my own. Thank you Ted for looking after me when 
+	  Paul was not in the office, carefully reviewing me code (and all of its style errors), and
+	  helping me figure out great way to get things done. 
+
+	  This internship has just been an unforgettable experience, and I really couldn't have 
+	  done it without you, Paul, choosing me as your intern, and I hope I was able make your 
+	  experience as a host rewarding as well. It was amazing to get a taste of Google's culture
+	  and I enjoyed every aspect of it. It was surprising to me how a work environment can be
+	  so stress-free, as I myself seem to naturally be a stressful person, but Google is full 
+	  of hardworking individuals who really know how to collaborate and build each other up
+	  while having enormous fun at the same time.
+
+	  This year, I will be taking some exciting courses such as Intro to AI, Data Science, 
+	  Machine Learning, Embedded Systems, Probably and Random Processes, and more that will
+	  definitely broaden my interests and increase my knowledge in computer science, but nothing
+	  trains me to become a better software engineer than do internships. It has been such 
+	  an incredible blessing and opportunity to work at Google this summer. Although I haven't
+	  decided my future plans yet, I definitely will keep in contact and if I am ever back, 
+	  I'll be sure to ping you guys! Please keep in touch and again, thank you for 
+	  helping me get to where I am today.
+
+	  P.S: Can you save me a Google cardboard?? :)
+
+	  Sam Kim
+	                   <img src="/assets/img/host1.jpg" class="pic-tall">    <img src="/assets/img/host2.jpg" class="pic-tall">
+	                                       <img src="/assets/img/host3.jpg" class="pic-long">
+		</pre>
 	</div>
 </div>
