--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -34,12 +34,6 @@ body {
   }
 }
 
-.map {
-  height: 400px;
-  width: 600px;
-  margin: auto;
-}
-
 *
 {
   font-family: Serif;
@@ -169,6 +163,9 @@ b {
   font-size: 20px;
 }
 
+.navigation ul {
+  margin-left: 40px;
+}
 .navigation li
 {
   display: inline;
@@ -509,6 +506,42 @@ footer {
   font-size: 18px;
   font-style: italic;
   margin-left: 120px;
+}
+
+pre {
+  display: block;
+  padding: 8.5px;
+  margin: 0 10px 9px;
+  font-size: 14px;
+  font-family: serif;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 16px;
+  word-break: break-all;
+  word-wrap: break-word;
+  white-space: pre;
+  white-space: pre-wrap;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+.pic-long {
+  width: 250px;
+  height: 200px;
+  margin: 10px;
+}
+
+.pic-tall {
+  width: 200px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 
