update main/add new resume

--- a/assets/partials/main.html
+++ b/assets/partials/main.html
@@ -14,13 +14,12 @@
 		</span>
 	-->
 	<about ng-class="{transition: toggle}" class="box on" ng-animate="box">
-		I'm a bright young student from Minnesota ready to thrive in the world 
-		revolutionized by scientific discovery and technology. I am currently 
-		working to obtain a B.S in Electrical Engineering and Computer Science at 
-		UC Berkeley. I have gained a fundamental knowledge of programming and am 
-		constantly trying to find new ways to tackle relevant problems and make 
-		life more convenient. When not in an academic setting, I enjoy snowboarding, 
-		dancing, and listening to music.
+		I am a fourth year student attending UC Berkeley, about to graduate a B.S 
+		in Electrical Engineering and Computer Science. For the past four years, 
+		I have gained a depth of knowledge through diverse coursework and have 
+		supplemented my education with both real-world and research experience. 
+		I am currently planning to pursue a Masters of Engineering degree in Computer Science
+		with a concentration in Data Science and Systems.
 		<a id="read-more" ng-hide="toggle" href="/" ng-click="toggleSwitch()">Read More</a>
 
 		
